Add metrics menu. Refactor BarInteractPanel. Beautify application.